<resources>
    <string name="app_name">SQLitePerf</string>
    <string name="run_tests">Run Tests</string>
    <string name="open_drawer">Open Options Drawer</string>
    <string name="close_drawer">Close Options Drawer</string>
    <string name="navigation_header_title">Benchmarks</string>
    <string name="run_tests_item_title">Run Test</string>
    <string name="run_tests_item_title_condensed">Run</string>

    <string name="insert_performance">Inserts</string>
    <string name="insert_performance_transactions_only">Inserts (Transactions)</string>
    <string name="insert_performance_no_transactions">Inserts (No Transactions)</string>
    <string name="insert_performance_batch_only">Inserts (Batch)</string>
    <string name="insert_performance_one_by_one">Inserts (1 at a Time)</string>
    <string name="insert_performance_one_by_one_no_transactions">Inserts (1 at a Time - No Transactions)</string>
    <string name="insert_performance_with_insert">Inserts with db.insert()</string>
    <string name="insert_performance_insert_vs_execsql">insert() vs execSQL()</string>
    <string name="insert_performance_one_by_one_vs_batched">execSQL: 1x1 vs batched</string>
    <string name="insert_performance_batched_vs_sqlitestatement_simple">execSQL vs. SQLiteStatement (simple)</string>
    <string name="insert_performance_batched_vs_sqlitestatement_tracks">execSQL vs. SQLiteStatement (tracks)</string>
    <string name="insert_performance_sqlitestatement_vs_room">SQLiteStatement vs. Room DAO</string>
    <string name="insert_performance_batched_sqlitestatement_vs_room">Batched SQLiteStatement vs. Room DAO</string>
    <string name="insert_performance_batched_vs_room">Batched vs. Room DAO</string>
    <string name="select_blob_performance_50k">SELECT blob data: 50kb</string>
</resources>
