<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/benchmark_inserts_with_insert"
        android:title="@string/insert_performance_with_insert"
        android:checkable="true"
        android:checked="false"
        />
    <item
        android:id="@+id/benchmark_inserts_insert_vs_execsql"
        android:title="@string/insert_performance_insert_vs_execsql"
        android:checkable="true"
        android:checked="false"
        />
    <item
        android:id="@+id/benchmark_inserts_one_by_one_vs_batched"
        android:title="@string/insert_performance_one_by_one_vs_batched"
        android:checkable="true"
        android:checked="false"
        />
    <item
        android:id="@+id/benchmark_inserts_batched_vs_sqlitestatement_simple"
        android:title="@string/insert_performance_batched_vs_sqlitestatement_simple"
        android:checkable="true"
        android:checked="false"
        />
    <item
        android:id="@+id/benchmark_inserts_batched_vs_sqlitestatement_tracks"
        android:title="@string/insert_performance_batched_vs_sqlitestatement_tracks"
        android:checkable="true"
        android:checked="false"
        />
    <item
        android:id="@+id/benchmark_inserts_sqlitestatement_vs_room"
        android:title="@string/insert_performance_sqlitestatement_vs_room"
        android:checkable="true"
        android:checked="false"
        />
    <item
        android:id="@+id/benchmark_inserts_batched_vs_room"
        android:title="@string/insert_performance_batched_vs_room"
        android:checkable="true"
        android:checked="false"
        />
    <item
        android:id="@+id/benchmark_inserts_batched_sqlitestatement_vs_room"
        android:title="@string/insert_performance_batched_sqlitestatement_vs_room"
        android:checkable="true"
        android:checked="false"
        />
    <item
        android:id="@+id/benchmark_select_blob_performance_50k"
        android:title="@string/select_blob_performance_50k"
        android:checkable="true"
        android:checked="false"
        />
</menu>